fixed modal header close spacing issue

--- a/app/assets/stylesheets/nfg_ui/network_for_good/public/_variables.scss
+++ b/app/assets/stylesheets/nfg_ui/network_for_good/public/_variables.scss
@@ -778,7 +778,7 @@ $badge-font-size:                   80%;
 $modal-inner-padding:               $spacer;
 
 $modal-dialog-margin:               $spacer;
-$modal-dialog-margin-y-sm-up:       ($spacer * .5);
+$modal-dialog-margin-y-sm-up:       ($spacer * 1.5);
 
 $modal-title-line-height:           inherit;
 
